@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-21T16:12:21Z",
-  "count_outdated" : 427,
-  "uniques_outdated" : 31,
+  "timestamp" : "2022-07-22T00:57:04Z",
+  "count_outdated" : 430,
+  "uniques_outdated" : 32,
   "count" : 444,
   "uniques" : 39,
   "views" : [
-    {
-      "timestamp": "2022-07-08T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-09T00:00:00Z",
       "count": 4,
