@@ -1,12 +1,7 @@
 {
-  "count": 17,
+  "count": 14,
   "uniques": 2,
   "views": [
-    {
-      "timestamp": "2022-07-08T00:00:00Z",
-      "count": 3,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-07-09T00:00:00Z",
       "count": 4,
